# snap

./: .ghci  .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CHECKLIST.md  CONTRIBUTORS  README.SNAP.md  README.md  TODO  bad.tpl  cabal.project  changelog.md  db.cfg  design.md  devel.cfg  haddock.sh  hie.yaml  init-sandbox.sh  pull.sh  pullLatestMaster.sh  runTestsAndCoverage.sh  shell.nix  snap.cabal  snap.cabal.orig  stack.yaml  tutorial.md
.github/workflows/: ci.yml
dist_snap-dev/: package.conf.inplace  setup-config
examples/: App.hs
extra/: haddock.css  hscolour.css
extra/fonts/: DroidSerif-Bold.eot  DroidSerif-BoldItalic.eot  DroidSerif-Italic.eot  DroidSerif-Regular.eot
project_template/auth/: foo.cabal
project_template/auth/snaplets/heist/templates/: base.tpl  new_user.tpl
project_template/auth/src/: Application.hs  Main.hs  Site.hs
project_template/barebones/: foo.cabal
project_template/barebones/src/: Main.hs  Server.hs
project_template/default/: foo.cabal
project_template/default/resources/templates/: index.tpl
project_template/default/snaplets/heist/templates/: _login.tpl  _new_user.tpl  base.tpl  echo.tpl  index.tpl  login.tpl  new_user.tpl  userform.tpl
project_template/default/src/: Application.hs  Glue.hs  Handlers.hs  Main.hs  Router.hs  Site.hs
project_template/default/src/Snap/Extension/: Timer.hs
project_template/default/src/Snap/Extension/Timer/: Impl.hs  Timer.hs
project_template/default/static/: screen.css
project_template/extensions/: foo.cabal
project_template/extensions/resources/templates/: index.tpl
project_template/extensions/src/: App.hs  Application.hs  Main.hs  Site.hs
project_template/hint/: foo.cabal
project_template/hint/resources/static/: screen.css
project_template/hint/resources/templates/: echo.tpl  index.tpl
project_template/hint/src/: AppState.hs  Config.hs  Glue.hs  Main.hs  Server.hs  Site.hs
project_template/tutorial/: foo.cabal
project_template/tutorial/src/: Part2.lhs  Tutorial.lhs
resources/templates/: foo.tpl  index.tpl  registerUser.tpl  session.tpl
snaplets/embedded/extra-templates/: extra.tpl
snaplets/heist/templates/: foopage.tpl  userpage.tpl
src/: Snap.hs
src/Control/Access/RoleBased/: Checker.hs  Role.hs  Types.hs
src/Control/Access/RoleBased/Internal/: Role.hs  RoleMap.hs  Rule.hs  Types.hs
src/Control/Monad/: Generic.hs
src/Data/RBAC/: Checker.hs  Role.hs  Types.hs
src/Data/RBAC/Internal/: Role.hs  RoleMap.hs  Rule.hs  Types.hs
src/Snap/: Error.hs  Extension.hs  Heist.hs  Snaplet.hs  Starter.hs  StarterTH.hs
src/Snap/Extension/: Heist.hs  Server.hs
src/Snap/Extension/Heist/: Heist.hs  Impl.hs
src/Snap/Extension/Loader/: Devel.hs  Hint.hs  Static.hs
src/Snap/Extension/Loader/Devel/: Evaluator.hs  Helper.hs  Signal.hs  TreeWatcher.hs
src/Snap/Extension/Loader/Hint/: Helper.hs
src/Snap/Extension/Server/: Hint.hs
src/Snap/Loader/: Devel.hs  Hint.hs  Prod.hs  Static.hs
src/Snap/Loader/Devel/: Evaluator.hs  Signal.hs  TreeWatcher.hs
src/Snap/Loader/Hint/: Helper.hs
src/Snap/Snaplet/: Auth.hs  Config.hs  Heist.hs  HeistNoClass.hs  Session.hs  Test.hs
src/Snap/Snaplet/Auth/: AuthManager.hs  Handlers.hs  Password.hs  SpliceHelpers.hs  Types.hs
src/Snap/Snaplet/Auth/Backends/: JsonFile.hs  Ldap.hs
src/Snap/Snaplet/Auth/Handlers/: Errors.hs
src/Snap/Snaplet/Heist/: Compiled.hs  Generic.hs  Internal.hs  Interpreted.hs
src/Snap/Snaplet/Internal/: .Types.hs.swo  Initializer.hs  Lens.hs  LensT.hs  Lensed.hs  RST.hs  TemporaryLensCruft.hs  Types.hs
src/Snap/Snaplet/Internal/Test/: Assertions.hs  Types.hs
src/Snap/Snaplet/Session/: Common.hs  Helpers.hs  SecureCookie.hs  SessionManager.hs
src/Snap/Snaplet/Session/Backends/: CookieSession.hs
test/: .ghci  db.cfg  devel.cfg  dist  nestTest.sh  runTests.sh  runTestsAndCoverage.sh  serveApp.sh  site_key.txt  snap-testsuite.cabal  snap-testsuite.cabal.orig  users.json
test/evenMoreTemplates/: bazpage.tpl
test/non-cabal-appdir/: good.tpl  sitekey.txt  snaplet.cfg
test/non-cabal-appdir/snaplets/baz/: snaplet.cfg
test/non-cabal-appdir/snaplets/baz/templates/: bazconfig.tpl  bazpage.tpl
test/non-cabal-appdir/snaplets/foosnaplet/: snaplet.cfg
test/non-cabal-appdir/snaplets/foosnaplet/templates/: foopage.tpl
test/non-cabal-appdir/snaplets/heist/templates/: page.tpl
test/non-cabal-appdir/templates/: session.tpl
test/snaplets/embedded/snaplets/heist/templates/: embeddedpage.tpl
test/snaplets/heist/templates/: _foopage.tpl  foopage.tpl  page.tpl  splicepage.tpl
test/snaplets/heist/templates/extraTemplates/: barpage.tpl
test/suite/: AppMain.hs  NestTest.hs  SafeCWD.hs  TestSuite.hs
test/suite/Blackbox/: App.hs  BarSnaplet.hs  Common.hs  EmbeddedSnaplet.hs  FooSnaplet.hs  MusicStoreSnaplet.hs  Tests.hs  Types.hs
test/suite/Blackbox/Snaplet/: Tests.hs
test/suite/Snap/: TestCommon.hs
test/suite/Snap/Snaplet/: App.hs  BarSnaplet.hs  FooSnaplet.hs  Tests.hs
test/suite/Snap/Snaplet/Auth/: App.hs  SpliceTests.hs  Tests.hs
test/suite/Snap/Snaplet/Auth/Handlers/: Tests.hs
test/suite/Snap/Snaplet/Auth/Types/: Tests.hs
test/suite/Snap/Snaplet/Common/: App.hs  BarSnaplet.hs  EmbeddedSnaplet.hs  FooSnaplet.hs  Handlers.hs  Types.hs
test/suite/Snap/Snaplet/Config/: App.hs  Tests.hs
test/suite/Snap/Snaplet/Heist/: App.hs  Tests.hs
test/suite/Snap/Snaplet/Internal/: Tests.hs
test/suite/Snap/Snaplet/Internal/LensT/: Tests.hs
test/suite/Snap/Snaplet/Internal/Lensed/: Tests.hs
test/suite/Snap/Snaplet/Internal/RST/: Tests.hs
test/suite/Snap/Snaplet/Test/: App.hs  Tests.hs
test/suite/Snap/Snaplet/Test/Common/: App.hs  BarSnaplet.hs  EmbeddedSnaplet.hs  FooSnaplet.hs  Handlers.hs  Types.hs
test/testapp/: LICENSE  testapp.cabal
test/testapp/src/: App.hs
test/testapp/templates/: index.tpl
