name:           snap
version:        1.0.0.0
synopsis:       Top-level package for the Snap Web Framework
description:
    This is the top-level package for the official Snap Framework libraries.
    It includes:
    .
    * The Snaplets API
    .
    * The \"snap\" executable program for generating starter projects
    .
    * Snaplets for sessions, authentication, and templates
    .
    To get started, issue the following sequence of commands:
    .
    @$ cabal install snap
    $ mkdir myproject
    $ cd myproject
    $ snap init@
    .
    If you have trouble or any questions, see our FAQ page
    (<http://snapframework.com/faq>) or the documentation
    (<http://snapframework.com/docs>).

license:        BSD3
license-file:   LICENSE
author:         Ozgun Ataman, Doug Beardsley, Gregory Collins, Carl Howells, Chris Smith
maintainer:     snap@snapframework.com
build-type:     Simple
cabal-version:  >= 1.8
homepage:       http://snapframework.com/
category:       Web, Snap

extra-source-files:
  CONTRIBUTORS,
  LICENSE,
  README.md,
  README.SNAP.md,
  extra/hscolour.css,
  extra/haddock.css,
  extra/logo.gif,
  test/snap-testsuite.cabal,
  test/runTestsAndCoverage.sh,
  test/suite/TestSuite.hs,
  test/suite/NestTest.hs,
  test/suite/Snap/TestCommon.hs,
  test/suite/Snap/Snaplet/Internal/Lensed/Tests.hs,
  test/suite/Snap/Snaplet/Internal/RST/Tests.hs,
  test/suite/Snap/Snaplet/Internal/Tests.hs,
  test/suite/Snap/Snaplet/Internal/LensT/Tests.hs,
  test/suite/Blackbox/Types.hs,
  test/suite/Blackbox/FooSnaplet.hs,
  test/suite/Blackbox/BarSnaplet.hs,
  test/suite/Blackbox/Common.hs,
  test/suite/Blackbox/EmbeddedSnaplet.hs,
  test/suite/Blackbox/Tests.hs,
  test/suite/Blackbox/App.hs,
  test/suite/SafeCWD.hs,
  test/suite/AppMain.hs,
  test/non-cabal-appdir/db.cfg,
  test/non-cabal-appdir/bad.tpl,
  test/non-cabal-appdir/snaplets/baz/templates/bazpage.tpl,
  test/non-cabal-appdir/snaplets/baz/templates/bazconfig.tpl,
  test/non-cabal-appdir/snaplets/baz/devel.cfg,
  test/non-cabal-appdir/snaplets/embedded/extra-templates/extra.tpl,
  test/non-cabal-appdir/snaplets/embedded/snaplets/heist/templates/embeddedpage.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/index.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/session.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/splicepage.tpl,
  test/non-cabal-appdir/snaplets/heist/templates/page.tpl,
  test/non-cabal-appdir/good.tpl,
  test/non-cabal-appdir/log/placeholder,
  test/non-cabal-appdir/devel.cfg,
  test/foosnaplet/templates/foopage.tpl,
  test/foosnaplet/devel.cfg

Library
  hs-source-dirs: src

  exposed-modules:
    Snap,
    Snap.Snaplet
    Snap.Snaplet.Heist
    Snap.Snaplet.HeistNoClass
    Snap.Snaplet.Heist.Compiled
    Snap.Snaplet.Heist.Generic
    Snap.Snaplet.Heist.Interpreted
    Snap.Snaplet.Auth
    Snap.Snaplet.Auth.Backends.JsonFile
    Snap.Snaplet.Config
    Snap.Snaplet.Session
    Snap.Snaplet.Session.Common
    Snap.Snaplet.Session.SessionManager
    Snap.Snaplet.Session.Backends.CookieSession
    Snap.Snaplet.Test

  other-modules:
    Control.Access.RoleBased.Checker
    Control.Access.RoleBased.Role
    Control.Access.RoleBased.Types
    Control.Access.RoleBased.Internal.Role
    Control.Access.RoleBased.Internal.RoleMap
    Control.Access.RoleBased.Internal.Rule
    Control.Access.RoleBased.Internal.Types
    Paths_snap
    Snap.Snaplet.Auth.AuthManager
    Snap.Snaplet.Auth.Types
    Snap.Snaplet.Auth.Handlers
    Snap.Snaplet.Auth.SpliceHelpers
    Snap.Snaplet.Heist.Internal
    Snap.Snaplet.Internal.Initializer
    Snap.Snaplet.Internal.LensT
    Snap.Snaplet.Internal.Lensed
    Snap.Snaplet.Internal.RST
    Snap.Snaplet.Internal.Types
    Snap.Snaplet.Session.SecureCookie

  build-depends:
    aeson                     >= 0.6      && < 0.8,
    attoparsec                >= 0.10     && < 0.13,
    base                      >= 4.4      && < 5,
    bytestring                >= 0.9.1    && < 0.11,
    cereal                    >= 0.3      && < 0.5,
    clientsession             >= 0.8      && < 0.10,
    comonad                   >= 1.1      && < 4.3,
    configurator              >= 0.1      && < 0.4,
    containers                >= 0.3      && < 0.6,
    deepseq                   >= 1.3      && < 1.4,
    directory                 >= 1.0      && < 1.3,
    directory-tree            >= 0.11     && < 0.13,
    dlist                     >= 0.5      && < 0.8,
    errors                    >= 1.4      && < 1.5,
    filepath                  >= 1.1      && < 1.4,
    -- Blacklist bad versions of hashable
    hashable                  (>= 1.1 && < 1.2) || (>= 1.2.0.6 && <1.3),
    heist                     >= 1.0      && < 1.1,
    lens                      >= 3.7.6    && < 4.2,
    lifted-base               >= 0.2      && < 0.3,
    logict                    >= 0.4.2    && < 0.7,
    map-syntax                >= 0.1      && < 0.2,
    monad-control             >= 0.3      && < 0.4,
    mtl                       >= 2.0      && < 2.3,
    mwc-random                >= 0.8      && < 0.14,
    pwstore-fast              >= 2.2      && < 2.5,
    regex-posix               >= 0.95     && < 1,
    snap-core                 >= 1.0      && < 1.1,
    snap-server               >= 1.0      && < 1.1,
    stm                       >= 2.2      && < 2.5,
    syb                       >= 0.1      && < 0.5,
    text                      >= 0.11     && < 1.2,
    time                      >= 1.1      && < 1.5,
    transformers              >= 0.2      && < 0.5,
    transformers-base         >= 0.4      && < 0.5,
    unordered-containers      >= 0.1.4    && < 0.3,
    vector                    >= 0.7.1    && < 0.11,
    vector-algorithms         >= 0.4      && < 0.7,
    xmlhtml                   >= 0.1      && < 0.3

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    RecordWildCards,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Test-suite testsuite
  hs-source-dirs: src test/suite
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  ghc-options: -fhpc

  other-modules:
    Snap,
    Snap.Snaplet
    Snap.Snaplet.Heist
    Snap.Snaplet.HeistNoClass
    Snap.Snaplet.Heist.Compiled
    Snap.Snaplet.Heist.Generic
    Snap.Snaplet.Heist.Interpreted
    Snap.Snaplet.Auth
    Snap.Snaplet.Auth.Backends.JsonFile
    Snap.Snaplet.Config
    Snap.Snaplet.Session
    Snap.Snaplet.Session.Common
    Snap.Snaplet.Session.SessionManager
    Snap.Snaplet.Session.Backends.CookieSession
    Snap.Snaplet.Test
    Snap.TestCommon
    Snap.Snaplet.Auth.SpliceTests
    Snap.Snaplet.Config.App
    Snap.Snaplet.Config.Tests

    Control.Access.RoleBased.Checker
    Control.Access.RoleBased.Role
    Control.Access.RoleBased.Types
    Control.Access.RoleBased.Internal.Role
    Control.Access.RoleBased.Internal.RoleMap
    Control.Access.RoleBased.Internal.Rule
    Control.Access.RoleBased.Internal.Types
    Paths_snap
    Snap.Snaplet.Auth.AuthManager
    Snap.Snaplet.Auth.Types
    Snap.Snaplet.Auth.Handlers
    Snap.Snaplet.Auth.SpliceHelpers
    Snap.Snaplet.Heist.App
    Snap.Snaplet.Heist.Internal
    Snap.Snaplet.Internal.Initializer
    Snap.Snaplet.Internal.LensT
    Snap.Snaplet.Internal.Lensed
    Snap.Snaplet.Internal.RST
    Snap.Snaplet.Internal.Types
    Snap.Snaplet.Session.SecureCookie

  build-depends:
    aeson                      >= 0.6      && < 0.8,
    async                      >= 2.0.1.5  && < 2.1,
    attoparsec                 >= 0.10     && < 0.13,
    base                       >= 4.4      && < 5,
    blaze-builder              >= 0.3.3.2  && < 0.4,  
    bytestring                 >= 0.9.1    && < 0.11,
    cereal                     >= 0.3      && < 0.5,
    clientsession              >= 0.8      && < 0.10,
    comonad                    >= 1.1      && < 4.3,
    configurator               >= 0.1      && < 0.4,
    containers                 >= 0.3      && < 0.6,
    deepseq                    >= 1.3.0.1  && < 1.4,        
    directory                  >= 1.0      && < 1.3,
    directory-tree             >= 0.11     && < 0.13,
    dlist                      >= 0.5      && < 0.8,
    errors                     >= 1.4      && < 1.5,
    filepath                   >= 1.1      && < 1.4,
    Glob                       >= 0.7.5    && < 0.8,
    -- Blacklist bad versions of hashable
    hashable                   (>= 1.1 && < 1.2) || (>= 1.2.0.6 && <1.3),
    heist                      >= 1.0      && < 1.1,
    http-streams               >= 0.7.1.1  && < 0.8,
    HUnit                      >= 1.2.5.2  && < 1.3,            
    lens                       >= 3.7.6    && < 4.2,
    lifted-base                >= 0.2      && < 0.3,
    logict                     >= 0.4.2    && < 0.7,
    map-syntax                 >= 0.1      && < 0.2,
    monad-control              >= 0.3      && < 0.4,
    mtl                        >= 2.0      && < 2.3,
    mwc-random                 >= 0.8      && < 0.14,
    pwstore-fast               >= 2.2      && < 2.5,
    QuickCheck                 >= 2.4.2    && < 2.8, 
    regex-posix                >= 0.95     && < 1,
    smallcheck                 >= 1.1.1    && < 1.2,
    snap-core                  >= 1.0      && < 1.1,
    snap-server                >= 1.0      && < 1.1,
    snap                       >= 1.0      && < 1.1,          
    stm                        >= 2.2      && < 2.5,
    syb                        >= 0.1      && < 0.5,
    test-framework             >= 0.8.0.3  && < 0.9,  
    test-framework-hunit       >= 0.3.0.1  && < 0.4, 
    test-framework-quickcheck2 >= 0.3.0.3  && < 0.4,
    test-framework-smallcheck  >= 0.2      && < 0.3, 
    text                       >= 0.11     && < 1.2,
    time                       >= 1.1      && < 1.5,
    transformers               >= 0.2      && < 0.5,
    transformers-base          >= 0.4      && < 0.5,
--    unix                       >= 2.6.0.1  && < 2.7,                     
    unordered-containers       >= 0.1.4    && < 0.3,
    vector                     >= 0.7.1    && < 0.11,
    vector-algorithms          >= 0.4      && < 0.7,
    xmlhtml                    >= 0.1      && < 0.3

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    RecordWildCards,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances


source-repository head
  type:     git
  location: https://github.com/snapframework/snap.git
