name:           snap-testsuite
version:        0.0.1
build-type:     Simple
cabal-version:  >= 1.8

Executable snap-testsuite
  hs-source-dirs:  ../src suite
  main-is:         TestSuite.hs

  build-depends:
    Glob                       >= 0.5      && < 0.8,
    HUnit                      >= 1.2      && < 2,
    MonadCatchIO-transformers  >= 0.2      && < 0.4,
    QuickCheck                 >= 2.3.0.2,
    aeson                      >= 0.6      && < 0.7,
    attoparsec                 >= 0.10     && < 0.11,
    base                       >= 4        && < 5,
    bytestring                 >= 0.9      && < 0.11,
    cereal                     >= 0.3      && < 0.4,
    clientsession              >= 0.7      && < 0.8,
    comonad                    >= 3.0      && < 3.1,
    configurator               >= 0.1      && < 0.3,
    containers                 >= 0.3,
    data-lens                  >= 2.0.1    && < 2.11,
    data-lens-template         >= 2.1.1    && < 2.2,
    directory,
    directory-tree             >= 0.10     && < 0.12,
    dlist                      >= 0.5      && < 0.6,
    errors                     >= 1.3.1    && < 1.4,
    filepath,
    hashable                   >= 1.1,
    heist                      >= 0.10     && < 0.11,
    http-conduit               >= 1.4      && < 1.7,
    http-types                 >= 0.6      && < 0.8,
    mtl                        >= 2,
    mwc-random                 >= 0.8,
    process                    == 1.*,
    pwstore-fast               == 2.*,
    snap-core                  >= 0.9      && < 0.10,
    snap-server                >= 0.9      && < 0.10,
    syb                        >= 0.1,
    test-framework             >= 0.6      && < 0.7,
    test-framework-hunit       >= 0.2.7    && < 0.3,
    test-framework-quickcheck2 >= 0.2.12.1 && < 0.3,
    text                       >= 0.11     && < 0.12,
    time                       >= 1.1,
    transformers               >= 0.2,
    unix                       >= 2.2.0.0  && < 2.7,
    unordered-containers       >= 0.1.4,
    template-haskell

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind


Executable app
  hs-source-dirs:  ../src suite
  main-is:         AppMain.hs

  build-depends:
    MonadCatchIO-transformers  >= 0.2     && < 0.4,
    attoparsec                 >= 0.10    && < 0.11,
    base                       >= 4       && < 5,
    bytestring                 >= 0.9     && < 0.11,
    cereal                     >= 0.3     && < 0.4,
    clientsession              >= 0.7.3.6 && < 0.9,
    comonad                    >= 3.0     && < 3.1,
    configurator               >= 0.1     && < 0.3,
    containers                 >= 0.3,
    data-lens                  >= 2.0.1   && < 2.11,
    data-lens-template         >= 2.1.1   && < 2.2,
    directory,
    directory-tree             >= 0.10    && < 0.12,
    dlist                      >= 0.5     && < 0.6,
    errors                     >= 1.3.1   && < 1.4,
    filepath,
    hashable                   >= 1.1,
    heist                      >= 0.10    && < 0.11,
    mtl                        >= 2,
    mwc-random                 >= 0.8,
    process                    == 1.*,
    snap-core                  >= 0.9.2   && < 0.10,
    snap-server                >= 0.9.2   && < 0.10,
    syb                        >= 0.1,
    time                       >= 1.1,
    text                       >= 0.11    && < 0.12,
    transformers               >= 0.2,
    unordered-containers       >= 0.1.4,
    template-haskell
    --FIXME

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind

Executable nesttest
  hs-source-dirs:  ../src suite
  main-is:         NestTest.hs

  build-depends:
    Glob                       >= 0.5     && < 0.8,
    HUnit                      >= 1.2     && < 2,
    MonadCatchIO-transformers  >= 0.2     && < 0.4,
    QuickCheck                 >= 2.3.0.2,
    attoparsec                 >= 0.10    && < 0.11,
    base                       >= 4       && < 5,
    bytestring                 >= 0.9     && < 0.11,
    cereal                     >= 0.3     && < 0.4,
    clientsession              >= 0.7     && < 0.8,
    comonad                    >= 3.0     && < 3.1,
    configurator               >= 0.1     && < 0.3,
    containers                 >= 0.3,
    data-lens                  >= 2.0.1   && < 2.11,
    data-lens-template         >= 2.1.1   && < 2.2,
    directory,
    directory-tree             >= 0.10    && < 0.12,
    dlist                      >= 0.5     && < 0.6,
    errors                     >= 1.3.1   && < 1.4,
    filepath,
    hashable                   >= 1.1,
    heist                      >= 0.10    && < 0.11,
    http-conduit               >= 1.4     && < 1.7,
    http-types                 >= 0.6     && < 0.8,
    mtl                        >= 2,
    mwc-random                 >= 0.8,
    process                    == 1.*,
    snap-core                  >= 0.9      && < 0.10,
    snap-server                >= 0.9      && < 0.10,
    syb                        >= 0.1,
    test-framework             >= 0.6      && <0.7,
    test-framework-hunit       >= 0.2.7    && <0.3,
    test-framework-quickcheck2 >= 0.2.12.1 && <0.3,
    text                       >= 0.11    && < 0.12,
    time                       >= 1.1,
    transformers               >= 0.2,
    unix                       >= 2.2.0.0 && < 2.6,
    unordered-containers       >= 0.1.4,
    template-haskell

  extensions:
    BangPatterns,
    CPP,
    DeriveDataTypeable,
    ExistentialQuantification,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    OverloadedStrings,
    PackageImports,
    Rank2Types,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind

